--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,11 @@
         <meta http-equiv="Expires" content="0" />
         <link rel="icon" type="image/x-icon" href="favicon.ico" />
         <link
-            href="assets/googleApi/Roboto.css"
+            href="/assets/googleApi/Roboto.css"
             rel="stylesheet"
         />
         <link
-            href="assets/googleApi/icon.css"
+            href="/assets/googleApi/icon.css"
             rel="stylesheet"
         />
     </head>
