--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
             rel="stylesheet"
         />
     </head>
-    <body class="1bg-blue-light">
+    <body class="bg-blue-light1 ">
         <app-root></app-root>
     </body>
 </html>
