--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>ONN-LINE</title>
-        <base href="/app/" />
+        <base href="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta
             http-equiv="Cache-Control"
