--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>ONN-LINE</title>
-        <base href="/" />
+        <base href="/app/" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta
             http-equiv="Cache-Control"
@@ -22,6 +22,9 @@
         />
     </head>
     <body class="bg-blue-light1 ">
-        <app-root></app-root>
+        <app-root>
+
+        </app-root>
+        
     </body>
 </html>
