--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>ONN-LINE</title>
-    <base href="/" />
+    <base href="/app/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
@@ -14,7 +14,6 @@
     <link href="/assets/googleApi/icon.css" rel="stylesheet" />
     <link href="https://unpkg.com/bootstrap-css-only@4.4.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://unpkg.com/@fortawesome/fontawesome-free@5.15.1/css/all.css" rel="stylesheet">
-    <link href="https://unpkg.com/angular-calendar@0.28.28/css/angular-calendar.css" rel="stylesheet">
     <link href="https://unpkg.com/flatpickr@4.6.6/dist/flatpickr.css" rel="stylesheet">
 </head>
 
