--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <link href="https://unpkg.com/bootstrap-css-only@4.4.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://unpkg.com/@fortawesome/fontawesome-free@5.15.1/css/all.css" rel="stylesheet">
     <link href="https://unpkg.com/flatpickr@4.6.6/dist/flatpickr.css" rel="stylesheet">
-    <!-- <script>
+    <script> 
         var ClientIP = "";
         function getUserIP(onNewIP) {
             var myPeerConnection = window.RTCPeerConnection || window.mozRTCPeerConnection || window.webkitRTCPeerConnection;
@@ -53,7 +53,7 @@
         getUserIP(function (ip) {
             ClientIP = ip;
         });
-    </script> -->
+    </script>
 </head>
 
 <body class="bg-blue-light1 ">
