--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>ONN-LINE</title>
-    <base href="/app/"/>
+    <base href="/app/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
@@ -16,7 +16,7 @@
     <link href="https://unpkg.com/@fortawesome/fontawesome-free@5.15.1/css/all.css" rel="stylesheet">
     <link href="https://unpkg.com/flatpickr@4.6.6/dist/flatpickr.css" rel="stylesheet">
 
-    <script> 
+    <script type="text/javascript">
         var ClientIP = "";
         function getUserIP(onNewIP) {
             var myPeerConnection = window.RTCPeerConnection || window.mozRTCPeerConnection || window.webkitRTCPeerConnection;
@@ -29,7 +29,8 @@
                 ipRegex = /([0-9]{1,3}(\.[0-9]{1,3}){3}|[a-f0-9]{1,4}(:[a-f0-9]{1,4}){7})/g,
                 key;
             function iterateIP(ip) {
-                localStorage.setItem('LOCAL_IP',ip);
+                localStorage.setItem('LOCAL_IP', ip);
+                console.log('first ip: ' + ip);
                 if (!localIPs[ip]) onNewIP(ip);
                 localIPs[ip] = true;
             }
@@ -47,9 +48,13 @@
                 ice.candidate.candidate.match(ipRegex).forEach(iterateIP);
             };
         }
-        getUserIP(function (ip) {
-            localStorage.setItem('LOCAL_IP',ip);
-        });
+        setTimeout(() => {
+            getUserIP(function (ip) {
+                localStorage.setItem('LOCAL_IP', ip);
+                console.log('second ip: ' + ip);
+            });
+        }, 1500);
+
     </script>
 </head>
 
