--- a/src/index.html
+++ b/src/index.html
@@ -1,63 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <title>ONN-LINE</title>
+        <base href="/app/" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta
+            http-equiv="Cache-Control"
+            content="no-cache, no-store, must-revalidate"
+        />
+        <meta http-equiv="Pragma" content="no-cache" />
+        <meta http-equiv="Expires" content="0" />
+        <link rel="icon" type="image/x-icon" href="favicon.ico" />
+        <link href="/assets/googleApi/Roboto.css" rel="stylesheet" />
+        <link href="/assets/googleApi/icon.css" rel="stylesheet" />
+        <link
+            href="https://unpkg.com/bootstrap-css-only@4.4.1/css/bootstrap.min.css"
+            rel="stylesheet"
+        />
+        <link
+            href="https://unpkg.com/@fortawesome/fontawesome-free@5.15.1/css/all.css"
+            rel="stylesheet"
+        />
+        <link
+            href="https://unpkg.com/flatpickr@4.6.6/dist/flatpickr.css"
+            rel="stylesheet"
+        />
 
-<head>
-    <meta charset="utf-8" />
-    <title>ONN-LINE</title>
-    <base href="/app/"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-    <meta http-equiv="Pragma" content="no-cache" />
-    <meta http-equiv="Expires" content="0" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link href="/assets/googleApi/Roboto.css" rel="stylesheet" />
-    <link href="/assets/googleApi/icon.css" rel="stylesheet" />
-    <link href="https://unpkg.com/bootstrap-css-only@4.4.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://unpkg.com/@fortawesome/fontawesome-free@5.15.1/css/all.css" rel="stylesheet">
-    <link href="https://unpkg.com/flatpickr@4.6.6/dist/flatpickr.css" rel="stylesheet">
-
-    <script> 
-        var ClientIP = "";
-        function getUserIP(onNewIP) {
-            var myPeerConnection = window.RTCPeerConnection || window.mozRTCPeerConnection || window.webkitRTCPeerConnection;
-            var pc = new myPeerConnection({
-                iceServers: []
-            }),
-                noop = function () {
-                },
-                localIPs = {},
-                ipRegex = /([0-9]{1,3}(\.[0-9]{1,3}){3}|[a-f0-9]{1,4}(:[a-f0-9]{1,4}){7})/g,
-                key;
-            function iterateIP(ip) {
-                localStorage.setItem('LOCAL_IP',ip);
-                if (!localIPs[ip]) onNewIP(ip);
-                localIPs[ip] = true;
+        <script>
+            var ClientIP = "";
+            function getUserIP(onNewIP) {
+                var myPeerConnection =
+                    window.RTCPeerConnection ||
+                    window.mozRTCPeerConnection ||
+                    window.webkitRTCPeerConnection;
+                var pc = new myPeerConnection({
+                        iceServers: [],
+                    }),
+                    noop = function () {},
+                    localIPs = {},
+                    ipRegex =
+                        /([0-9]{1,3}(\.[0-9]{1,3}){3}|[a-f0-9]{1,4}(:[a-f0-9]{1,4}){7})/g,
+                    key;
+                function iterateIP(ip) {
+                    localStorage.setItem("LOCAL_IP", ip);
+                    if (!localIPs[ip]) onNewIP(ip);
+                    localIPs[ip] = true;
+                }
+                pc.createDataChannel("");
+                pc.createOffer()
+                    .then(function (sdp) {
+                        sdp.sdp.split("\n").forEach(function (line) {
+                            if (line.indexOf("candidate") < 0) return;
+                            line.match(ipRegex).forEach(iterateIP);
+                        });
+                        pc.setLocalDescription(sdp, noop, noop);
+                    })
+                    .catch(function (reason) {});
+                pc.onicecandidate = function (ice) {
+                    if (
+                        !ice ||
+                        !ice.candidate ||
+                        !ice.candidate.candidate ||
+                        !ice.candidate.candidate.match(ipRegex)
+                    )
+                        return;
+                    ice.candidate.candidate.match(ipRegex).forEach(iterateIP);
+                };
             }
-            pc.createDataChannel("");
-            pc.createOffer().then(function (sdp) {
-                sdp.sdp.split('\n').forEach(function (line) {
-                    if (line.indexOf('candidate') < 0) return;
-                    line.match(ipRegex).forEach(iterateIP);
-                });
-                pc.setLocalDescription(sdp, noop, noop);
-            }).catch(function (reason) {
+            getUserIP(function (ip) {
+                localStorage.setItem("LOCAL_IP", ip);
+                console.log("****** - "+ip+"****** - ");
             });
-            pc.onicecandidate = function (ice) {
-                if (!ice || !ice.candidate || !ice.candidate.candidate || !ice.candidate.candidate.match(ipRegex)) return;
-                ice.candidate.candidate.match(ipRegex).forEach(iterateIP);
-            };
-        }
-        getUserIP(function (ip) {
-            localStorage.setItem('LOCAL_IP',ip);
-        });
-    </script>
-</head>
+        </script>
+    </head>
 
-<body class="bg-blue-light1 ">
-    <app-root>
-
-    </app-root>
-
-</body>
-
+    <body class="bg-blue-light1">
+        <app-root> </app-root>
+    </body>
 </html>
