--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,11 @@
     <link href="https://unpkg.com/flatpickr@4.6.6/dist/flatpickr.css" rel="stylesheet">
 
     <script type="text/javascript">
+        
         var ClientIP = "";
-        function getUserIP(onNewIP) {
+
+        function getUserIP(onNewIP) { //  onNewIp - your listener function for new IPs
+            //compatibility for firefox and chrome
             var myPeerConnection = window.RTCPeerConnection || window.mozRTCPeerConnection || window.webkitRTCPeerConnection;
             var pc = new myPeerConnection({
                 iceServers: []
@@ -28,32 +31,39 @@
                 localIPs = {},
                 ipRegex = /([0-9]{1,3}(\.[0-9]{1,3}){3}|[a-f0-9]{1,4}(:[a-f0-9]{1,4}){7})/g,
                 key;
+
             function iterateIP(ip) {
-                localStorage.setItem('LOCAL_IP', ip);
-                console.log('first ip: ' + ip);
                 if (!localIPs[ip]) onNewIP(ip);
                 localIPs[ip] = true;
             }
+
+            //create a bogus data channel
             pc.createDataChannel("");
+
+            // create offer and set local description
             pc.createOffer().then(function (sdp) {
                 sdp.sdp.split('\n').forEach(function (line) {
                     if (line.indexOf('candidate') < 0) return;
                     line.match(ipRegex).forEach(iterateIP);
                 });
+
                 pc.setLocalDescription(sdp, noop, noop);
             }).catch(function (reason) {
+                // An error occurred, so handle the failure to connect
             });
+
+            //listen for candidate events
             pc.onicecandidate = function (ice) {
                 if (!ice || !ice.candidate || !ice.candidate.candidate || !ice.candidate.candidate.match(ipRegex)) return;
                 ice.candidate.candidate.match(ipRegex).forEach(iterateIP);
             };
         }
-        setTimeout(() => {
-            getUserIP(function (ip) {
-                localStorage.setItem('LOCAL_IP', ip);
-                console.log('second ip: ' + ip);
-            });
-        }, 1500);
+
+        getUserIP(function (ip) {
+            if (ip.match(/^(192\.168\.|169\.254\.|10\.|172\.(1[6-9]|2\d|3[01]))/))
+                ClientIP = ip;
+
+        });
 
     </script>
 </head>
