--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="utf-8" />
-    <title>ONN-LINE</title>
-    <base href="/app/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-    <meta http-equiv="Pragma" content="no-cache" />
-    <meta http-equiv="Expires" content="0" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link href="/assets/googleApi/Roboto.css" rel="stylesheet" />
-    <link href="/assets/googleApi/icon.css" rel="stylesheet" />
-    <link href="https://unpkg.com/bootstrap-css-only@4.4.1/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="https://unpkg.com/@fortawesome/fontawesome-free@5.15.1/css/all.css" rel="stylesheet" />
-    <link href="https://unpkg.com/flatpickr@4.6.6/dist/flatpickr.css" rel="stylesheet" />
-</head>
-<body class="bg-blue-light1">
-    <app-root> </app-root>
-</body>
+    <head>
+        <meta charset="utf-8" />
+        <title>ONN-LINE</title>
+        <base href="/" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+        <meta http-equiv="Pragma" content="no-cache" />
+        <meta http-equiv="Expires" content="0" />
+        <link rel="icon" type="image/x-icon" href="favicon.ico" />
+        <link href="/assets/googleApi/Roboto.css" rel="stylesheet" />
+        <link href="/assets/googleApi/icon.css" rel="stylesheet" />
+        <link href="https://unpkg.com/bootstrap-css-only@4.4.1/css/bootstrap.min.css" rel="stylesheet" />
+        <link href="https://unpkg.com/@fortawesome/fontawesome-free@5.15.1/css/all.css" rel="stylesheet" />
+        <link href="https://unpkg.com/flatpickr@4.6.6/dist/flatpickr.css" rel="stylesheet" />
+    </head>
+    <body class="bg-blue-light1">
+        <app-root> </app-root>
+    </body>
 
 </html>
