--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <title>ONN-LINE</title>
-        <base href="/app/" />
+        <base href="/" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
         <meta http-equiv="Pragma" content="no-cache" />
