--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
         <meta charset="utf-8" />
         <title>ONN-LINE</title>
-        <base href="/app/" />
+        <base href="/" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
         <meta http-equiv="Pragma" content="no-cache" />
@@ -17,7 +16,7 @@
         <link href="https://unpkg.com/flatpickr@4.6.6/dist/flatpickr.css" rel="stylesheet" />
     </head>
     <body class="bg-blue-light1">
-        <app-root> </app-root>
+        <app-root></app-root>
     </body>
 
 </html>
