--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>ONN-LINE</title>
-    <base href="/app/" />
+    <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
@@ -15,7 +15,6 @@
     <link href="https://unpkg.com/bootstrap-css-only@4.4.1/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://unpkg.com/@fortawesome/fontawesome-free@5.15.1/css/all.css" rel="stylesheet" />
     <link href="https://unpkg.com/flatpickr@4.6.6/dist/flatpickr.css" rel="stylesheet"/>
-
 </head>
 
 <body class="bg-blue-light1">
