--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,8 @@
             href="https://unpkg.com/@fortawesome/fontawesome-free@5.15.1/css/all.css"
             rel="stylesheet"
         />
+
+        מרכז רפואי צפון (פוריה), ע"ש ברוך פדה
         <link
             href="https://unpkg.com/flatpickr@4.6.6/dist/flatpickr.css"
             rel="stylesheet"
