fix year filtter 05012023

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>ONN-LINE</title>
-        <base href="/app/" />
+        <base href="/" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta
             http-equiv="Cache-Control"
@@ -22,8 +22,6 @@
             href="https://unpkg.com/@fortawesome/fontawesome-free@5.15.1/css/all.css"
             rel="stylesheet"
         />
-
-        מרכז רפואי צפון (פוריה), ע"ש ברוך פדה
         <link
             href="https://unpkg.com/flatpickr@4.6.6/dist/flatpickr.css"
             rel="stylesheet"
